# sonarqube

./: ai-codefix-guide.md  cost  guide-sonarqube-cli.md  install-sonar-cli.sh  report_sonar.py  report_sonar_per_year.py  sonar-ai-codefix-user-guide-en.md  sonar-ai-codefix-user-guide.md  sonar_report_logging.py  sonarqube-upgrade-2026.1-user-guide.md  tmp
ci/: README.md
ci/gitlab/: .gitlab-ci.yml
ci/jenkins/: Jenkinsfile
ci/test-project/: .gitignore  README.md  pyproject.toml  sonar-project.properties
ci/test-project/src/calculator/: __init__.py  calculator.py
ci/test-project/tests/: test_calculator.py
docs/: README.md
docs/01-vision-overview/: README.md
docs/02-guides-par-role/: developpeurs.md  devops-cicd.md  product-owners.md  securite-compliance.md  tech-leads.md
docs/03-guides-par-projet/: angular-react-web.md  autres-stacks.md  dotnet.md  java-jvm.md
docs/04-qualite-couverture-standards/: politique-couverture.md  profils-qualite-ecocode.md  quality-gate-standard.md
docs/05-integration/: 01-pipeline-maven.md  02-pipeline-gradle.md  03-pipeline-dotnet.md  04-pipeline-angular-react.md
docs/05-integration-cicd/: templates-pipelines.md
docs/06-release-management/: gating-releases.md
docs/07-exploitation-datacenter/: 01-architecture-plateforme.md  02-exploitation-quotidienne.md  03-monitoring-alertes.md  04-sauvegarde-restauration.md  05-maintenance-upgrades.md  06-incident-troubleshooting.md  (+2 more)
temps/: Decision_SAST_presentation_1.pptx  Dossier_decision_outil_SAST.docx  Synthese_SAST_4slides.pptx  Synthese_comparatif_SAST_2pages.docx  read.md
(+3 files in other folders)
