[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sonar-jfrog-demo"
version = "0.1.0"
description = "Projet Python minimal pour tester le pipeline SonarQube 2026.1 + JFrog Evidence Collection"
requires-python = ">=3.10"
authors = [{ name = "POC Sonar" }]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "--cov=calculator --cov-report=xml --cov-report=term --junitxml=reports/pytest.xml"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src/calculator"]

[tool.coverage.xml]
output = "coverage.xml"
